Fix setup for ksushy templates

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,7 +5,7 @@ recursive-include extras *
 recursive-include tests *
 recursive-include kvirt/web/static *
 recursive-include kvirt/web/templates *
-recursive-include kvirt/sushy/templates *
+recursive-include kvirt/ksushy/templates *
 recursive-include kvirt/internalplans *
 recursive-include kvirt/cluster/kind *
 recursive-include kvirt/cluster/k3s *
